--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="normal.css" rel="stylesheet" type="text/css">
     <link href="style.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,200' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:900' rel='stylesheet' type='text/css'>
 
   </head>
 
@@ -22,19 +23,51 @@
         <a href="#" class="menuItem"><span class="lined">Contact</span></a>
       </header>
       <div id="splash">
+        New Harbor Development
+        <br>
+        <div class="blurb">(a real estate development and acquisition firm
+        <br>
+        specializing in creating service-enriched affordable housing)</div>
+
 
       </div>
       <div id="contentContainer">
         <div class="content white">
+          <h1>Acquisition</h1>
           New Harbor Development is actively seeking acquisition opportunities in the Mid-Atlantic region that align with its mission. We are interested in acquisitions of existing mixed income, income restricted, and naturally affordable properties.  We are also interested in new construction and land development opportunities in transit oriented areas and areas of opportunity.
           <p>
           If you have an opportunity that you would like to share with New Harbor Development please email acquisitions@newharbordev.com
         </div>
         <div class="content white">
-          Michael learned the investor's perspective as a Development Specialist at the National Affordable Housing Trust, a national non-profit tax credit syndicator. He gained the developer and owner perspective as the Development Director of Homes for America, a premier non-profit developer.
+          <h1>Services</h1>
+          New Harbor Development provides the following services:
+          <ul>
+            <li>Development and ownership</li>
+            <li>Consulting and advisory services</li>
+            <li>Underwriting and financial structuring</li>
+            <li>Design development and construction documentation</li>
+            <li>Zoning and site analysis</li>
+
+            <li>Land use entitlements and approvals</li>
+
+            <li>Contract negotiation</li>
+
+            <li>Lender and investor relations</li>
+            <li>Project management</li>
+          </ul>
         </div>
         <div class="content white">
+          <h1>About</h1>
+          Michael Font founded New Harbor Development with the mission to create safe harbors for opportunity to set sail.
+          <p>
           Michael learned the investor's perspective as a Development Specialist at the National Affordable Housing Trust, a national non-profit tax credit syndicator. He gained the developer and owner perspective as the Development Director of Homes for America, a premier non-profit developer.
+          <p>
+          In these roles, Michael developed the skills to take a project from concept to completion, and hopes to use his experience to create new developments and provide similarly aligned organizations with advisory and consulting services.
+          <p>
+          Michael has a Bachelor of Arts in Economics and a minor in Environmental Studies from Dartmouth College.
+        </div>
+        <div class="content white">
+        <h1>Contact</h1>
         </div>
       </div>
       <footer>
